# pulsarity

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  tesst.py  test.py
.github/workflows/: backend-tests.yml  mypy.yml  pylint.yml  ruff.yml  ruff_format.yml  ruff_import.yml  ruff_lint.yml
docs/: .readthedocs.yaml  conf.py  index.rst
docs/_templates/: custom-mod-template.rst
docs/development/: code_autosummary.rst  documentation.rst  full_stack_dev.rst  index.rst  local_docs.rst
src/frontend/: .gitkeep
src/prophazard/: __init__.py  __main__.py  config.py  extensions.py
src/prophazard/auth/: _authorizer.py  _permissions.py
src/prophazard/database/: __init__.py  permission.py  pilot.py  raceformat.py  role.py  user.py
src/prophazard/database/_base/: __init__.py  _baseclassifiers.py  _basemanager.py
src/prophazard/database/race/: __init__.py
src/prophazard/database/race/_manager/: __init__.py  _pilotmanager.py  _racedatamanager.py
src/prophazard/database/race/_orm/: __init__.py  _pilot.py  raceformat.py
src/prophazard/database/user/: __init__.py  _enums.py
src/prophazard/database/user/_manager/: _permissionmanager.py  _rolemanager.py  _userdatamanager.py  _usermanager.py
src/prophazard/database/user/_orm/: __init__.py  permission.py  role.py  user.py
src/prophazard/events/: __init__.py  _enums.py  broker.py  enums.py
src/prophazard/race/: enums.py  manager.py
src/prophazard/utils/: __init__.py  config.py  crypto.py  eager_task.py  executor.py
src/prophazard/webserver/: __init__.py  auth.py  components.py  events.py  routes.py  tasks.py  validation.py  websockets.py
src/pulsarity/: __init__.py  __main__.py  ctx.py  extensions.py
src/pulsarity/_protobuf/: __init__.py  database_pb2.py  database_pb2.pyi  http_pb2.py  http_pb2.pyi  ui_pb2.py  ui_pb2.pyi  websocket_pb2.py  websocket_pb2.pyi
src/pulsarity/_validation/: __init__.py  _base.py  database.py  http.py  websocket.py
src/pulsarity/builtins/processors/: most_laps.py
src/pulsarity/database/: __init__.py  _base.py  base.py  event.py  heat.py  lap.py  permission.py  pilot.py  raceclass.py  raceevent.py  raceformat.py  role.py  round.py  signal.py  slot.py  user.py
src/pulsarity/defaults/: __init__.py
src/pulsarity/defaults/processors/: most_laps.py
src/pulsarity/defaults/rulesets/: most_laps.py
src/pulsarity/defaults/timer_interfaces/: mock_interface.py
src/pulsarity/events/: __init__.py  broker.py  client.py  enums.py  registry.py  server.py
src/pulsarity/interface/: __init__.py  timer_interface.py  timer_manager.py
src/pulsarity/protobuf/: __init__.py  database_pb2.py  database_pb2.pyi  http_pb2.pyi
src/pulsarity/race/: __init__.py  _state.py  enums.py  manager.py  processor.py  ruleset.py  state.py
src/pulsarity/ui/: elements.py
src/pulsarity/user_interface/: elements.py
src/pulsarity/utils/: asyncio.py  background.py  collections.py  config.py  crypto.py  executor.py  logging.py  sorted.py  time.py
src/pulsarity/webserver/: __init__.py  _auth.py  _status_codes.py  _wrapper.py  app.py  application.py  auth.py  events.py  http.py  lifespan.py  routes.py  validation.py  websockets.py  wrapper.py
tests/: conftest.py  test_database.py  test_general.py  test_webserver.py
tests/test_database/: test_base.py  test_event.py  test_system.py  test_user.py  test_user_database.py
tests/test_events/: test_event_broker.py
tests/test_general/: test_application.py  test_event_broker.py  test_timer_interface.py
tests/test_interface/: test_timer_interface.py
tests/test_race/: test_manager.py  test_processor.py  test_state.py
tests/test_race/test_processor/: test_base.py  test_most_laps.py
tests/test_race/test_ruleset/: test_base.py  test_most_laps.py
tests/test_utils/: test_val_sorted_dict.py
tests/test_webserver/: __init__.py  test_auth.py  test_routes.py  test_websockets.py
