[project]
name = "pulsarity"
version = "0.1.0-dev"
description = "A demonstrator project for a RotorHazard variant"
authors = [
    { name = "Bryce Gruber", email = "dev@brycegruber.com"}
]
readme = "README.md"
license = "LGPL-3.0-only"
requires-python = ">=3.14,<4.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX :: Linux",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3.14"
]

dependencies = [
    "starlette==0.52.1",
    "starsessions==2.2.1",
    "aiosqlite==0.22.1",
    "hypercorn==0.18.0",
    "uvloop==0.22.1 ; sys_platform == \"linux\" or sys_platform == \"darwin\"",
    "winloop==0.5.0 ; sys_platform == \"win32\"",
    "cryptography==46.0.5",
    "argon2-cffi==25.1.0",
    "tortoise-orm==1.1.7",
    "pydantic==2.12.5",
    "cffi==2.0.0",
    "anyio==4.12.1",
    "protobuf==7.34.1",
]

[project.urls]
repository = "https://github.com/i-am-grub/pulsarity"

[project.optional-dependencies]
pgsql = [ "asyncpg==0.31" ]

[project.scripts]
pulsarity = "pulsarity.__main__:main"

[build-system]
requires = ["uv_build==0.10.2"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "httpx-ws==0.8.2",
    "mypy==1.19.1",
    "pylint==4.0.4",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-randomly==4.0.1",
    "types-protobuf>=6.32.1.20260221",
]
docs = [
    "myst-parser==5.0.0",
    "sphinx==9.1.0",
    "sphinx-book-theme==1.2.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-substitution-extensions==2026.1.12",
]

[tool.mypy]
exclude = ["tests", "src/pulsarity/_protobuf"]

[tool.pylint]
ignore = ["tests", "src/pulsarity/_protobuf"]
ignored-modules = ["pulsarity._protobuf.*", "google.protobuf.*"]
disable = [
    "too-few-public-methods",
]

[tool.ruff.lint]
exclude = ["tests/*", "docs/*", ".mypy_cache", "env", "src/pulsarity/_protobuf/*"]
select = [
    # defaults
    "E4", "E7", "E9", "F",

    # extras
    "A",        # don't shadow builtins
    "B",        # enable bugbear
    "BLE",      # blind exception checks
    "C4",       # use comprehensions
    "COM",      # catch weird comma situations
    "EM",       # error message standards
    "ERA",      # commented out code
    "EXE",      # shebang and permissions checks
    "FA",       # validate __future__ annotate usage
    "FURB",     # refurbishment & modernization
    "I",        # isort
    "INP",      # packages should have __init__.py
    "N",        # pep8 object naming rules
    "PERF",     # performance hits
    "PIE",      # flake8-pie misc. checks
    "PLC",      # pylint conventions
    "PLE",      # pylint errors
    "PLW",      # pylint warnings
    "PT",       # pytest style control
    "Q",        # quote controls
    "RET",      # check usage of return
    "RUF",      # ruff-specific rules
    "S",        # bandit (security checks)
    "SIM",      # code simplicity
    "T10",      # don't leave debugger breakpoints around
    "T20",      # don't leave print() or pprint() around
    "TC",       # type checking quality stuff (that mypy doesn't check for)[
    "TRY",      # better handling of exceptions
    "W",        # pycodestyle warnings
    "YTT",      # year2020: python3 version checks
]
ignore = [
    "COM812",
]

[tool.ruff.format]
docstring-code-format = true
exclude = ["src/pulsarity/_protobuf/*"]

[tool.pytest.ini_options]
addopts = "--no-cov-on-fail --showlocals --strict-markers"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]
