[project]
name = "pulsarity"
version = "0.1.0-dev"
description = "A demonstrator project for a RotorHazard variant"
authors = [
    { name = "Bryce Gruber", email = "dev@brycegruber.com"}
]
readme = "README.md"
license = "LGPL-3.0-only"
requires-python = ">=3.14,<4.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX :: Linux",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3.14"
]

dependencies = [
    # Main dependencies
    "starlette==1.0.0",
    "starsessions==2.2.1",
    "hypercorn==0.18.0",
    "cryptography==46.0.7",
    "argon2-cffi==25.1.0",
    "tortoise-orm==1.1.7",
    "pydantic==2.12.5",
    "anyio==4.13.0",
    "protobuf==7.34.1",

    # Upstream Dependencies
    "cffi==2.0.0", # argon, cryptography
    "idna==3.11", # anyio, httpx
    "argon2-cffi-bindings==25.1.0", # argon
    "pycparser==3.0", # cffi
    "h11==0.16.0", # hypercorn
    "h2==4.3.0", # hypercorn
    "hpack==4.1.0", # hypercorn
    "hyperframe==6.1.0", # hypercorn
    "priority==2.0.0", # hypercorn
    "wsproto==1.3.2", # hypercorn
    "annotated-types==0.7.0", # pydantic
    "typing-extensions==4.15.0", # pydantic
    "typing-inspection==0.4.2", # pydantic
    "itsdangerous==2.2.0", # star-sessions
    "aiosqlite==0.22.1", # tortoise-orm
    "iso8601==2.1.0", # tortoise-orm
    "pypika-tortoise==0.6.5" # tortoise-orm
]

[project.urls]
repository = "https://github.com/i-am-grub/pulsarity"

[project.optional-dependencies]
pgsql = [ "asyncpg==0.31.0" ]

[project.scripts]
pulsarity = "pulsarity.__main__:main"

[build-system]
requires = ["uv_build==0.11.3"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # Unit testing
    "httpx==0.28.1",
    "httpx-ws==0.9.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-randomly==4.0.1",

    # Linting
    "mypy==1.20.1",
    "pylint==4.0.5",
    "types-protobuf==7.34.1.20260408",

    # Upstream Dependencies
    "certifi==v2026.2.25", # httpx
    "httpcore==1.0.9", # httpx
    "librt==0.9.0", # mypy
    "mypy-extensions==1.1.0", # mypy
    "pathspec==1.0.4", # mypy
    "astroid==4.0.2", # pylint
    "dill==0.4.0", # pylint
    "isort==7.0.0", # pylint
    "mccabe==0.7.0", # pylint
    "platformdirs==4.5.1", # pylint
    "tomlkit==0.13.3", # pylint
    "iniconfig==2.3.0", # pytest
    "packaging==26.0", # pytest
    "pluggy==1.6.0", # pytest
    "pygments==2.20.0", # pytest
    "coverage==7.13.0", # pytest-cov
]
docs = [
    "myst-parser==5.0.0",
    "sphinx==9.1.0",
    "sphinx-book-theme==1.2.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-substitution-extensions==2026.1.12",
]

[tool.mypy]
exclude = ["tests", "src/pulsarity/_protobuf"]
local_partial_types = true

[tool.pylint]
ignore = ["tests", "src/pulsarity/_protobuf"]
ignored-modules = ["pulsarity._protobuf.*", "google.protobuf.*"]
disable = [
    "too-few-public-methods",
]

[tool.ruff.lint]
exclude = ["tests/*", "docs/*", ".mypy_cache", "env", "src/pulsarity/_protobuf/*"]
select = [
    # defaults
    "E4", "E7", "E9", "F",

    # extras
    "A",        # don't shadow builtins
    "B",        # enable bugbear
    "BLE",      # blind exception checks
    "C4",       # use comprehensions
    "COM",      # catch weird comma situations
    "EM",       # error message standards
    "ERA",      # commented out code
    "EXE",      # shebang and permissions checks
    "FA",       # validate __future__ annotate usage
    "FURB",     # refurbishment & modernization
    "I",        # isort
    "INP",      # packages should have __init__.py
    "N",        # pep8 object naming rules
    "PERF",     # performance hits
    "PIE",      # flake8-pie misc. checks
    "PLC",      # pylint conventions
    "PLE",      # pylint errors
    "PLW",      # pylint warnings
    "PT",       # pytest style control
    "Q",        # quote controls
    "RET",      # check usage of return
    "RUF",      # ruff-specific rules
    "S",        # bandit (security checks)
    "SIM",      # code simplicity
    "T10",      # don't leave debugger breakpoints around
    "T20",      # don't leave print() or pprint() around
    "TC",       # type checking quality stuff (that mypy doesn't check for)[
    "TRY",      # better handling of exceptions
    "W",        # pycodestyle warnings
    "YTT",      # year2020: python3 version checks
]
ignore = [
    "COM812",
]

[tool.ruff.format]
docstring-code-format = true
exclude = ["src/pulsarity/_protobuf/*"]

[tool.pytest.ini_options]
addopts = "--no-cov-on-fail --showlocals --strict-markers"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]
