[project]
name = "pulsarity"
description = "A demonstrator project for a RotorHazard variant"
authors = [
    { name = "Bryce Gruber", email = "dev@brycegruber.com"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14,<4.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: POSIX :: Linux",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3.14"
]
dynamic = ["version"]

dependencies = [
    # Main dependencies
    "starlette==1.3.1",
    "starsessions==2.2.1",
    "granian==2.7.8",
    "cryptography==49.0.0",
    "argon2-cffi==25.1.0",
    "tortoise-orm==1.1.7",
    "anyio==4.14.0",
    "protobuf==7.35.0",
    "async-lru==2.3.0",
    "pulsarity-localization", # Added repo as source until an offical release is made
    # Upstream Dependencies
    "cffi==2.0.0", # argon, cryptography
    "idna==3.18", # anyio, httpx
    "argon2-cffi-bindings==25.1.0", # argon
    "pycparser==3.0", # cffi
    "click==8.4.1", # granian
    "itsdangerous==2.2.0", # star-sessions
    "aiosqlite==0.22.1", # tortoise-orm
    "iso8601==2.1.0", # tortoise-orm
    "pypika-tortoise==0.6.5" # tortoise-orm
]

[project.urls]
repository = "https://github.com/i-am-grub/pulsarity"

[project.scripts]
pulsarity = "pulsarity.__main__:main"

[build-system]
requires = ["hatchling==1.29.0", "versioningit==3.3.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulsarity"]
exclude = [".gitignore"]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]
default-tag = "0.0.0"

[tool.versioningit.next-version]
method = "minor-release"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"

[dependency-groups]
dev = [
    # Unit testing
    "httpx==0.28.1",
    "httpx-ws==0.9.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-randomly==4.1.0",
    # Linting
    "mypy==2.1.0",
    "pylint==4.0.6",
    "types-protobuf==7.34.1.20260518",
    "ruff==0.15.21",
    "basedpyright>=1.39.9",
]
docs = [
    "myst-parser==5.1.0",
    "sphinx==9.1.0",
    "sphinx-book-theme==1.2.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-substitution-extensions==2026.1.12",
]
profile = ["viztracer==1.1.1"]

[tool.uv.sources]
pulsarity-localization = { git = "https://github.com/i-am-grub/pulsarity-localization", branch = 'master'}

[tool.mypy]
exclude = ["tests", "src/pulsarity/_protobuf"]
local_partial_types = true

[tool.pylint]
ignore = ["tests", "src/pulsarity/_protobuf"]
ignored-modules = ["pulsarity._protobuf.*", "google.protobuf.*"]
disable = [
    "too-few-public-methods",
]

[tool.ruff.lint]
exclude = ["tests/*", "docs/*", ".mypy_cache", "env", "src/pulsarity/_protobuf/*"]
select = [
    "A",        # don't shadow builtins
    "ASYNC",    # flake8-async
    "ARG",      # flake8-unused-arguments
    "B",        # enable bugbear
    "BLE",      # blind exception checks
    "C4",       # use comprehensions
    "C90",      # mccabe
    "COM",      # catch weird comma situations
    "DTZ",      # flake8-datetimez
    "E",        # pycodestyle error
    "EM",       # error message standards
    "ERA",      # commented out code
    "EXE",      # shebang and permissions checks
    "F",        # pyflakes
    "FA",       # validate __future__ annotate usage
    "FIX",      # flake8-fixme
    "FURB",     # refurbishment & modernization
    "FLY",      # flynt
    "G",        # flake8-logging-format
    "I",        # isort
    "ICN",      # flake8-import-conventions
    "INP",      # packages should have __init__.py
    "INT",      # flake8-gettext
    "ISC",      # flake8-implicit-str-concat
    "LOG",      # flake8-logging
    "N",        # pep8 object naming rules
    "PERF",     # performance hits
    "PIE",      # flake8-pie misc. checks
    "PL",       # pylint
    "PT",       # pytest style control
    "PTH",      # flake8-use-pathlib
    "Q",        # quote controls
    "RSE",      # flake8-raise
    "RET",      # check usage of return
    "RUF",      # ruff-specific rules
    "S",        # bandit (security checks)
    "SIM",      # code simplicity
    "SLOT",     # flaske8-slots
    "T10",      # don't leave debugger breakpoints around
    "T20",      # don't leave print() or pprint() around
    "TC",       # type checking quality stuff (that mypy doesn't check for)
    "TD",       # flake8-todos
    "TID",      # flake8-tidy-imports
    "TRY",      # better handling of exceptions
    "W",        # pycodestyle warnings
    "YTT",      # year2020: python3 version checks
    "UP",       # pyupgrade
]
ignore = [
    # "ASYNC109"
]

[tool.ruff.format]
docstring-code-format = true
exclude = ["src/pulsarity/_protobuf/*"]

[tool.pytest.ini_options]
addopts = "--no-cov-on-fail --showlocals --strict-markers"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]
